Add modern performance and Java 17/21 compatibility mods (Angelica, ArchaicFix, FalsePatternLib)